remove disabled attribute to btnsubmit button

--- a/AccountMateWebOrder/Views/ShoppingCart/Index.cshtml
+++ b/AccountMateWebOrder/Views/ShoppingCart/Index.cshtml
@@ -87,7 +87,8 @@
                             </td>
                             <td class="text-right">
                                 <div class="pull-right">
-                                    <button id="btnsubmit" type="submit" class="btn btn-primary pull-right" disabled>Checkout <i class="fa fa-check"></i></button>
+                                    @*<button id="btnsubmit" type="submit" class="btn btn-primary pull-right" disabled>Checkout <i class="fa fa-check"></i></button>*@
+                                    <button id="btnsubmit" type="submit" class="btn btn-primary pull-right">Checkout <i class="fa fa-check"></i></button>
                                 </div>
                             </td>
                         </tr>
