--- a/AccountMateWebOrder/Views/Home/Detail.cshtml
+++ b/AccountMateWebOrder/Views/Home/Detail.cshtml
@@ -9,7 +9,7 @@
 {
     @Html.ValidationSummary(true, "There are some errors.", new { @class = "text-danger" });
 
-    <div class="card" style="margin-bottom: 20px">
+    <div class="card">
         <div class="row">
             <aside class="col-sm-5 border-right">
                 <article class="gallery-wrap">
