--- a/AccountMateWebOrder/Views/Shared/_Layout.cshtml
+++ b/AccountMateWebOrder/Views/Shared/_Layout.cshtml
@@ -7,11 +7,12 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+    <script src="~/Scripts/jquery-3.4.1.slim.min.js"></script>
+
     <link href="~/Content/Site.css" rel="stylesheet" />
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
 
     <script src="~/Scripts/jquery-3.4.1.js"></script>
-
     <style>
         a:hover {
             text-decoration: none;
@@ -19,19 +20,20 @@
     </style>
 </head>
 <body>
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-        <h5 class="my-0 mr-md-auto font-weight-normal">@Html.ActionLink(AccountMateWebOrder.Services.CompanyService.CompanyName, "Index", "Home", new { area = "" }, null)</h5>
+    <div id="nav-bar" class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
+        <h5 id="logo" class="my-0 mr-md-auto font-weight-normal">@Html.ActionLink(AccountMateWebOrder.Services.CompanyService.CompanyName, "Index", "Home", new { area = "" }, null)</h5>
         <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
+            @* <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />*@
         </form>
-        <nav class="my-2 my-md-0 mr-md-3">
+        <nav class="my-2 my-md-0 mr-md-3" div id="navbar-right">
             <a class="p-2 text-dark" href="#">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</a>
             <a class="p-2 text-dark" href="#">@Html.ActionLink("Cart ", "Index", "ShoppingCart", new { area = "" }, null)@Html.Partial("_NotificationsPartial")</a>
-            <a class="p-2 text-dark" href="#">Enterprise</a>
+            @*<a class="p-2 text-dark" href="#">Enterprise</a>*@
+            <a class="p-2 text-dark" href="#">@Html.ActionLink("Login", "Index", "Login")</a>
         </nav>
-        <a class="btn btn-outline-primary" href="@Url.Action("Index", "Login")">LOGIN</a>
+
     </div>
-    <div class="container body-content" style="padding-top: 80px">
+    <div class="container body-content" style="padding-top: 80px; padding-bottom: 20px; margin-bottom:20px; border-radius: 0px 0px 15px 15px; background-color: rgba(21, 186, 91, 0.03)">
         @RenderBody()
     </div>
 
@@ -109,5 +111,24 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+    <script>
+        resize();
+        $(window).resize(resize);
+        function resize() {
+            if ($(window).width() > 768) {
+                if ($("#nav-bar").offset().top > 50) {
+                    $("#nav-bar").addClass("shrink-nav");
+                    $("#logo").addClass("shrink-logo");
+                } else {
+                    $("#nav-bar").removeClass("shrink-nav");
+                    $("#logo").removeClass("shrink-logo");
+                }
+            } else {
+                $(".nav-bar").addClass("shrink-nav");
+                $("logo").addClass("shrink-logo");
+            }
+        }
+    </script>
 </body>
 </html>
