--- a/AccountMateWebOrder/Views/ShoppingCart/Index.cshtml
+++ b/AccountMateWebOrder/Views/ShoppingCart/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-12">
             <div class="table-responsive">
-                <table id="tblcart" class="table table-hover shopping-cart-wrap">
+                <table id="tblcart" class="table table-hover shopping-cart-wrap" style="background-color: white;">
                     <thead class="text-body">
                         <tr>
                             <th scope="col">Product</th>
