--- a/AccountMateWebOrder/Views/Home/Detail.cshtml
+++ b/AccountMateWebOrder/Views/Home/Detail.cshtml
@@ -103,7 +103,7 @@
 
                     <div class="row">
                         <div class="col-8">
-                            <a href="#" class="btn btn-md btn-primary text-uppercase"> Buy now </a>
+                            <a href="#" id="addOrder" class="btn btn-md btn-primary text-uppercase"> Buy now </a>
                             <a href="#" id="addToCart" class="btn btn-md btn-outline-primary text-uppercase"> <i class="fa fa-shopping-cart"></i> Add to cart </a>
                         </div>
                         <div class="col-4">
@@ -115,6 +115,7 @@
         </div>
     </div>
 
+    @Html.Partial("_AddOrder", Model)
     @Html.Partial("_AddProduct", Model)
 }
 
@@ -124,6 +125,11 @@
     $("#addToCart").on("click", function () {
         $("#QtyDisplay").text($('#Quantity').val());
         $('#addToCartConfirmation').modal('show');
+    });
+
+    $("#addOrder").on("click", function () {
+        $("#OrderQtyDisplay").text($('#Quantity').val());
+        $('#addOrderConfirmation').modal('show');
     });
 
     $("form").dirrty({
