--- a/AccountMateWebOrder/Views/Home/_AddOrder.cshtml
+++ b/AccountMateWebOrder/Views/Home/_AddOrder.cshtml
@@ -1,18 +1,18 @@
-﻿<div class="modal fade" id="addToCartConfirmation" tabindex="-1" role="dialog" aria-labelledby="addToCartConfirmationLabel" aria-hidden="true">
+﻿<div class="modal fade" id="addOrderConfirmation" tabindex="-1" role="dialog" aria-labelledby="addOrderConfirmationLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addToCartConfirmationLabel">Confirmation</h5>
+                <h5 class="modal-title" id="addOrderConfirmationLabel">Confirmation</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                Do you want to add <b>(<label id="QtyDisplay"></label>) @Model.ItemCode</b> to cart?
+                Do you want to create cart for <b>(<label id="OrderQtyDisplay"></label>) @Model.ItemCode</b>?, and discard your current cart?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-md btn-outline-primary text-uppercase"><i class="fa fa-check"></i> Ok </button>
+                <button type="submit" name="submit" value="buy" class="btn btn-md btn-outline-primary text-uppercase"><i class="fa fa-check"></i> Ok </button>
             </div>
         </div>
     </div>
