--- a/AccountMateWebOrder/Views/Shared/_Layout.cshtml
+++ b/AccountMateWebOrder/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
                     <a class="nav-link" href="@Url.Action("Index","Home")">Home<span class="sr-only">(current)</span></a>
-                </li>
+                </li>*@
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Index","ShoppingCart")">Cart @Html.Partial("_NotificationsPartial")</a>
                 </li>
@@ -58,7 +58,7 @@
         </div>
     </nav>
 
-    <div class="container body-content" style="padding-top: 80px; padding-bottom: 20px; margin-bottom:20px; border-radius: 0px 0px 15px 15px; background-color: #97a2a7;">
+    <div class="container body-content" style="padding-top: 80px; padding-bottom: 20px; margin-bottom:20px; border-radius: 0px 0px 15px 15px; background-color: #e9ecef;">
         @RenderBody()
     </div>
 
