--- a/AccountMateWebOrder/Views/Shared/_Layout.cshtml
+++ b/AccountMateWebOrder/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
+                @*<li class="nav-item active">
                     <a class="nav-link" href="@Url.Action("Index","Home")">Home<span class="sr-only">(current)</span></a>
                 </li>*@
                 <li class="nav-item">
